# mypypi2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.toml  config.testing.toml  docker-compose.yml  notes.py  notes.txt  pyproject.toml  todo.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  test.yml
app/: app.py  caching.py  config.example.json  config.example.toml  config.py  constants.py  http.py  utils.py  wsgi.py
app/data/: packages.py  proxy.py  sql.py
app/data/cache/: __init__.py  active.py  base.py  database.py  decorator.py  filesystem.py  memcached.py  memory.py  redis.py  wrappers.py
app/data/index/: html.py  simple.py
app/data/s3/: path.py  upload.py
app/data/sql/: main.py  main2.py
app/data/storage/: __init__.py  active.py  base.py  filesystem.py  local.py  s3.py
app/models/: MAINTENANCE.md  base.py  cache.py  code_file.py  code_file_hash.py  database.py  enums.py  exceptions.py  metadata_file.py  metadata_file_hash.py  package.py  package_code_file.py  package_file.py  package_file_hash.py  package_metadata_file.py  package_update.py  package_version_filename.py  repository.py  url_cache.py
app/routes/: favicon.py  file.py  healthcheck.py  simple.py
app/templates/: simple.html.j2  simple_json.py
docker/: Dockerfile  docker-entrypoint.py  gunicorn-config.py
tests/: conftest.py
tests/app/: test_utils.py
tests/app/data/: test_packages.py
tests/app/data/index/: test_html.py
tests/app/models/: test_code_file.py  test_metadata_file.py  test_package.py  test_package_file.py  test_repository.py
