[project]
    name = "mypypi2"
    version = "0.1.3"
    description = "Simple pull-through PyPi cache"
    license = { text = "MIT" }
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.12"
    dependencies = [
        "flask-sqlalchemy>=3.1.1",  # ORM
        "flask>=3.0.3",             # web framework
        "gunicorn>=23.0.0",         # deployment web server
        "loguru>=0.7.2",            # logging
        "lxml>=5.3.0",              # fast XML parser
        "packaging>=24.1",          # PEP 440 version parsing
        "psycopg2-binary>=2.9.9",   # PostgreSQL client. Using binary files so it works with Alpine
        "pydantic-settings>=2.5.2", # config file parsing
        "pyjson5>=1.6.6",           # fast json parser
        "pymemcache>=4.0.0",        # Memcached client
        "redis>=5.0.8",             # Redis client
        "requests>=2.32.3",         # HTTP requests
        "s3fs>=2024.9.0",           # S3 filesystem
        "ulid-py>=1.1.0",           # ULID generation
    ]

[dependency-groups]
    dev = [
        "pre-commit>=3.2.0",
        "pytest>=7.3.1",
        "pytest-cov>=4.1",
        "pytest-flask-sqlalchemy>=1.1.0",
        "freezegun>=1.5.1",               # time mocking
    ]

[[tool.uv.index]]
    # dogfood
    name = "mypypi"
    url = "https://pypi.nathanv.app/pypi/simple"
    default = true

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[tool.ruff]
    # i have an ultra-wide monitor and makes things easier to read
    line-length = 120
